tests/baselines/reference/switchBreakStatements.errors.txt
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(3,10): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(9,10): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(16,10): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(22,10): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(25,18): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(31,10): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(34,18): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(41,10): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(43,18): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(45,26): error TS2322: Type '"a"' is not assignable to type '""'.
tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts(49,34): error TS2322: Type '"a"' is not assignable to type '""'.


==== tests/cases/conformance/statements/breakStatements/switchBreakStatements.ts (11 errors) ====
    
    switch ('') {
        case 'a':
             ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
            break;
    }
    
    ONE:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
            break ONE;
    }
    
    TWO:
    THREE:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
            break THREE;
    }
    
    FOUR:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
            FIVE:
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
                    break FOUR;
            }
    }
    
    switch ('') {
        case 'a':
             ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
            SIX:
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
                    break SIX;
            }
    }
    
    SEVEN:
    switch ('') {
        case 'a':
             ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
            switch ('') {
                case 'a':
                     ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
                    switch ('') {
                        case 'a':
                             ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
                            break SEVEN;
                            EIGHT:
                            switch ('') {
                                case 'a':
                                     ~~~
!!! error TS2322: Type '"a"' is not assignable to type '""'.
                                    var fn = function () { }
                                    break EIGHT;
                            }
                    }
            }
    }
    